# sftp_transfer

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
src/sftp_transfer/: __init__.py  logger.py  pipe_process.py
